// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cases for matching snapshot for event should match snapshot and display generic webcast data when attendeeId not present 1`] = `
<div
  className=""
  style={Object {}}
>
  <div
    className="sectionContainer"
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 0,
        "hover": Object {
          "backgroundColor": "#FFFFFF",
        },
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "margin": "auto",
          "maxWidth": "800px",
        }
      }
    >
      <div
        className=""
        style={Object {}}
      >
        <div
          className=""
          style={Object {}}
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className=""
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "flex": "1 1 auto",
                  "hover": Object {
                    "backgroundColor": "transparent",
                  },
                  "paddingBottom": 0,
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": "1.875rem",
                  "pointerEvents": undefined,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "color": "#273F69",
                    "fontFamily": "PT Sans, sans-serif",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": 400,
                    "hover": "css-87ndg2",
                    "lineHeight": "1.3",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                  }
                }
              >
                EventGuestSide_VirtualDetails_passwordText__resx
              </div>
              <div
                className=""
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "color": "#041532",
                    "fontFamily": "PT Sans, sans-serif",
                    "fontSize": "1.875rem",
                    "fontStyle": "normal",
                    "fontWeight": 400,
                    "hover": "css-87ndg2",
                    "lineHeight": "1.3",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                  }
                }
              >
                <div
                  className=""
                  style={Object {}}
                >
                  generic event password
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className=""
          style={Object {}}
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className=""
              data-cvent-id="widget-VirtualDetailsJoinButton-widget:virtualDetails-action-button"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "flex": "1 1 auto",
                  "hover": Object {
                    "backgroundColor": "transparent",
                  },
                  "paddingBottom": 15,
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": "1.875rem",
                  "pointerEvents": undefined,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "textAlign": "center",
                  }
                }
              >
                <button
                  className=""
                  onClick={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#041532",
                      "borderColor": "#041532",
                      "borderRadius": 6,
                      "borderStyle": "solid",
                      "borderWidth": 1,
                      "color": "#FFFFFF",
                      "fontFamily": "PT Sans, sans-serif",
                      "fontSize": "1.25rem",
                      "fontStyle": "normal",
                      "fontWeight": 400,
                      "hover": "css-87ndg2",
                      "lineHeight": "1.3",
                      "paddingBottom": 5,
                      "paddingLeft": "1.25rem",
                      "paddingRight": "1.25rem",
                      "paddingTop": 5,
                    }
                  }
                  type="button"
                >
                  <span
                    className=""
                    style={Object {}}
                  >
                    EventGuestSide_virtualDetails_JoinEventButton__resx
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className=""
          style={Object {}}
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className=""
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "flex": "1 1 auto",
                  "hover": Object {
                    "backgroundColor": "transparent",
                  },
                  "paddingBottom": "1.875rem",
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": 15,
                  "pointerEvents": undefined,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "color": "#273F69",
                    "fontFamily": "PT Sans, sans-serif",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": 400,
                    "hover": "css-87ndg2",
                    "lineHeight": "1.3",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                  }
                }
              >
                <p>
                  EventGuestSide_VirtualDetails_JoiningInvitee__resx:{"fullName":"EventWidgets_InviteeName__resx:{\\"firstName\\":\\"\\",\\"lastName\\":\\"\\"}"}
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`cases for matching snapshot for event should match snapshot and display recording url and password if event has passed 1`] = `
<div
  className=""
  style={Object {}}
>
  <div
    className="sectionContainer"
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 0,
        "hover": Object {
          "backgroundColor": "#FFFFFF",
        },
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "margin": "auto",
          "maxWidth": "800px",
        }
      }
    >
      <div
        className=""
        style={Object {}}
      >
        <div
          className=""
          style={Object {}}
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className=""
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "flex": "1 1 auto",
                  "hover": Object {
                    "backgroundColor": "transparent",
                  },
                  "paddingBottom": 0,
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": "1.875rem",
                  "pointerEvents": undefined,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "color": "#273F69",
                    "fontFamily": "PT Sans, sans-serif",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": 400,
                    "hover": "css-87ndg2",
                    "lineHeight": "1.3",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                  }
                }
              >
                EventGuestSide_VirtualDetails_passwordText__resx
              </div>
              <div
                className=""
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "color": "#041532",
                    "fontFamily": "PT Sans, sans-serif",
                    "fontSize": "1.875rem",
                    "fontStyle": "normal",
                    "fontWeight": 400,
                    "hover": "css-87ndg2",
                    "lineHeight": "1.3",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                  }
                }
              >
                <div
                  className=""
                  style={Object {}}
                >
                  event recording password
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className=""
          style={Object {}}
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className=""
              data-cvent-id="widget-VirtualDetailsJoinButton-widget:virtualDetails-action-button"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "flex": "1 1 auto",
                  "hover": Object {
                    "backgroundColor": "transparent",
                  },
                  "paddingBottom": 15,
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": "1.875rem",
                  "pointerEvents": undefined,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "textAlign": "center",
                  }
                }
              >
                <button
                  className=""
                  onClick={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#041532",
                      "borderColor": "#041532",
                      "borderRadius": 6,
                      "borderStyle": "solid",
                      "borderWidth": 1,
                      "color": "#FFFFFF",
                      "fontFamily": "PT Sans, sans-serif",
                      "fontSize": "1.25rem",
                      "fontStyle": "normal",
                      "fontWeight": 400,
                      "hover": "css-87ndg2",
                      "lineHeight": "1.3",
                      "paddingBottom": 5,
                      "paddingLeft": "1.25rem",
                      "paddingRight": "1.25rem",
                      "paddingTop": 5,
                    }
                  }
                  type="button"
                >
                  <span
                    className=""
                    style={Object {}}
                  >
                    EventWidgets_Agenda_Session_Watch_Recording__resx
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className=""
          style={Object {}}
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className=""
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "flex": "1 1 auto",
                  "hover": Object {
                    "backgroundColor": "transparent",
                  },
                  "paddingBottom": "1.875rem",
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": 15,
                  "pointerEvents": undefined,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "color": "#273F69",
                    "fontFamily": "PT Sans, sans-serif",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": 400,
                    "hover": "css-87ndg2",
                    "lineHeight": "1.3",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                  }
                }
              >
                <p>
                  EventGuestSide_VirtualDetails_JoiningInvitee__resx:{"fullName":"EventWidgets_InviteeName__resx:{\\"firstName\\":\\"\\",\\"lastName\\":\\"\\"}"}
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`cases for matching snapshot for event should match snapshot and show generic message widget when event has passed and no recording url is available 1`] = `
<div
  className=""
  style={Object {}}
>
  <div
    className="sectionContainer"
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 0,
        "hover": Object {
          "backgroundColor": "#FFFFFF",
        },
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "margin": "auto",
          "maxWidth": "800px",
        }
      }
    >
      <div
        className=""
        style={Object {}}
      >
        <div
          className=""
          style={Object {}}
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className=""
              data-cvent-id="widget-GenericMessage-widget:virtualDetails-genericMessage"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "flex": "1 1 auto",
                  "hover": Object {
                    "backgroundColor": "transparent",
                  },
                  "paddingBottom": 15,
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": "1.875rem",
                  "pointerEvents": undefined,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "color": "#041532",
                    "fontFamily": "PT Sans, sans-serif",
                    "fontSize": "1.375rem",
                    "fontStyle": "normal",
                    "fontWeight": 400,
                    "hover": "css-87ndg2",
                    "lineHeight": "1.3",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                  }
                }
              >
                <p>
                  EventGuestSide_VirtualDetails_GenericMessage__resx
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`cases for matching snapshot for event should match snapshot and show generic message widget when event is cancelled 1`] = `
<div
  className=""
  style={Object {}}
>
  <div
    className="sectionContainer"
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 0,
        "hover": Object {
          "backgroundColor": "#FFFFFF",
        },
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "margin": "auto",
          "maxWidth": "800px",
        }
      }
    >
      <div
        className=""
        style={Object {}}
      >
        <div
          className=""
          style={Object {}}
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className=""
              data-cvent-id="widget-GenericMessage-widget:virtualDetails-genericMessage"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "flex": "1 1 auto",
                  "hover": Object {
                    "backgroundColor": "transparent",
                  },
                  "paddingBottom": 15,
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": "1.875rem",
                  "pointerEvents": undefined,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "color": "#041532",
                    "fontFamily": "PT Sans, sans-serif",
                    "fontSize": "1.375rem",
                    "fontStyle": "normal",
                    "fontWeight": 400,
                    "hover": "css-87ndg2",
                    "lineHeight": "1.3",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                  }
                }
              >
                <p>
                  EventGuestSide_VirtualDetails_GenericMessage__resx
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`cases for matching snapshot for event should match snapshot for displaying event webcast data 1`] = `
<div
  className=""
  style={Object {}}
>
  <div
    className="sectionContainer"
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 0,
        "hover": Object {
          "backgroundColor": "#FFFFFF",
        },
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "margin": "auto",
          "maxWidth": "800px",
        }
      }
    >
      <div
        className=""
        style={Object {}}
      >
        <div
          className=""
          style={Object {}}
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className=""
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "flex": "1 1 auto",
                  "hover": Object {
                    "backgroundColor": "transparent",
                  },
                  "paddingBottom": 0,
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": "1.875rem",
                  "pointerEvents": undefined,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "color": "#273F69",
                    "fontFamily": "PT Sans, sans-serif",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": 400,
                    "hover": "css-87ndg2",
                    "lineHeight": "1.3",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                  }
                }
              >
                EventGuestSide_VirtualDetails_passwordText__resx
              </div>
              <div
                className=""
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "color": "#041532",
                    "fontFamily": "PT Sans, sans-serif",
                    "fontSize": "1.875rem",
                    "fontStyle": "normal",
                    "fontWeight": 400,
                    "hover": "css-87ndg2",
                    "lineHeight": "1.3",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                  }
                }
              >
                <div
                  className=""
                  style={Object {}}
                >
                  attendee specific data password for event
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className=""
          style={Object {}}
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className=""
              data-cvent-id="widget-VirtualDetailsJoinButton-widget:virtualDetails-action-button"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "flex": "1 1 auto",
                  "hover": Object {
                    "backgroundColor": "transparent",
                  },
                  "paddingBottom": 15,
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": "1.875rem",
                  "pointerEvents": undefined,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "textAlign": "center",
                  }
                }
              >
                <button
                  className=""
                  onClick={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#041532",
                      "borderColor": "#041532",
                      "borderRadius": 6,
                      "borderStyle": "solid",
                      "borderWidth": 1,
                      "color": "#FFFFFF",
                      "fontFamily": "PT Sans, sans-serif",
                      "fontSize": "1.25rem",
                      "fontStyle": "normal",
                      "fontWeight": 400,
                      "hover": "css-87ndg2",
                      "lineHeight": "1.3",
                      "paddingBottom": 5,
                      "paddingLeft": "1.25rem",
                      "paddingRight": "1.25rem",
                      "paddingTop": 5,
                    }
                  }
                  type="button"
                >
                  <span
                    className=""
                    style={Object {}}
                  >
                    EventGuestSide_virtualDetails_JoinEventButton__resx
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className=""
          style={Object {}}
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className=""
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "flex": "1 1 auto",
                  "hover": Object {
                    "backgroundColor": "transparent",
                  },
                  "paddingBottom": "1.875rem",
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": 15,
                  "pointerEvents": undefined,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "color": "#273F69",
                    "fontFamily": "PT Sans, sans-serif",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": 400,
                    "hover": "css-87ndg2",
                    "lineHeight": "1.3",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                  }
                }
              >
                <p>
                  EventGuestSide_VirtualDetails_JoiningInvitee__resx:{"fullName":"EventWidgets_InviteeName__resx:{\\"firstName\\":\\"\\",\\"lastName\\":\\"\\"}"}
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`cases for matching snapshot for session should match snapshot and display generic message widget when attendeeId not present 1`] = `
<div
  className=""
  style={Object {}}
>
  <div
    className="sectionContainer"
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 0,
        "hover": Object {
          "backgroundColor": "#FFFFFF",
        },
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "margin": "auto",
          "maxWidth": "800px",
        }
      }
    >
      <div
        className=""
        style={Object {}}
      >
        <div
          className=""
          style={Object {}}
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className=""
              data-cvent-id="widget-GenericMessage-widget:virtualDetails-genericMessage"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "flex": "1 1 auto",
                  "hover": Object {
                    "backgroundColor": "transparent",
                  },
                  "paddingBottom": 15,
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": "1.875rem",
                  "pointerEvents": undefined,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "color": "#041532",
                    "fontFamily": "PT Sans, sans-serif",
                    "fontSize": "1.375rem",
                    "fontStyle": "normal",
                    "fontWeight": 400,
                    "hover": "css-87ndg2",
                    "lineHeight": "1.3",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                  }
                }
              >
                <p>
                  EventGuestSide_VirtualDetails_GenericMessage__resx
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`cases for matching snapshot for session should match snapshot and display generic message widget when session has passed and no recording url is available 1`] = `
<div
  className=""
  style={Object {}}
>
  <div
    className="sectionContainer"
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 0,
        "hover": Object {
          "backgroundColor": "#FFFFFF",
        },
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "margin": "auto",
          "maxWidth": "800px",
        }
      }
    >
      <div
        className=""
        style={Object {}}
      >
        <div
          className=""
          style={Object {}}
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className=""
              data-cvent-id="widget-GenericMessage-widget:virtualDetails-genericMessage"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "flex": "1 1 auto",
                  "hover": Object {
                    "backgroundColor": "transparent",
                  },
                  "paddingBottom": 15,
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": "1.875rem",
                  "pointerEvents": undefined,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "color": "#041532",
                    "fontFamily": "PT Sans, sans-serif",
                    "fontSize": "1.375rem",
                    "fontStyle": "normal",
                    "fontWeight": 400,
                    "hover": "css-87ndg2",
                    "lineHeight": "1.3",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                  }
                }
              >
                <p>
                  EventGuestSide_VirtualDetails_GenericMessage__resx
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`cases for matching snapshot for session should match snapshot and display generic message widget when session is cancelled 1`] = `
<div
  className=""
  style={Object {}}
>
  <div
    className="sectionContainer"
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 0,
        "hover": Object {
          "backgroundColor": "#FFFFFF",
        },
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "margin": "auto",
          "maxWidth": "800px",
        }
      }
    >
      <div
        className=""
        style={Object {}}
      >
        <div
          className=""
          style={Object {}}
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className=""
              data-cvent-id="widget-GenericMessage-widget:virtualDetails-genericMessage"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "flex": "1 1 auto",
                  "hover": Object {
                    "backgroundColor": "transparent",
                  },
                  "paddingBottom": 15,
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": "1.875rem",
                  "pointerEvents": undefined,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "color": "#041532",
                    "fontFamily": "PT Sans, sans-serif",
                    "fontSize": "1.375rem",
                    "fontStyle": "normal",
                    "fontWeight": 400,
                    "hover": "css-87ndg2",
                    "lineHeight": "1.3",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                  }
                }
              >
                <p>
                  EventGuestSide_VirtualDetails_GenericMessage__resx
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`cases for matching snapshot for session should match snapshot and display recording url and password if session has passed 1`] = `
<div
  className=""
  style={Object {}}
>
  <div
    className="sectionContainer"
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 0,
        "hover": Object {
          "backgroundColor": "#FFFFFF",
        },
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "margin": "auto",
          "maxWidth": "800px",
        }
      }
    >
      <div
        className=""
        style={Object {}}
      >
        <div
          className=""
          style={Object {}}
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className=""
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "flex": "1 1 auto",
                  "hover": Object {
                    "backgroundColor": "transparent",
                  },
                  "paddingBottom": 0,
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": "1.875rem",
                  "pointerEvents": undefined,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "color": "#273F69",
                    "fontFamily": "PT Sans, sans-serif",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": 400,
                    "hover": "css-87ndg2",
                    "lineHeight": "1.3",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                  }
                }
              >
                EventGuestSide_VirtualDetails_passwordText__resx
              </div>
              <div
                className=""
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "color": "#041532",
                    "fontFamily": "PT Sans, sans-serif",
                    "fontSize": "1.875rem",
                    "fontStyle": "normal",
                    "fontWeight": 400,
                    "hover": "css-87ndg2",
                    "lineHeight": "1.3",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                  }
                }
              >
                <div
                  className=""
                  style={Object {}}
                >
                  session recording password
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className=""
          style={Object {}}
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className=""
              data-cvent-id="widget-VirtualDetailsJoinButton-widget:virtualDetails-action-button"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "flex": "1 1 auto",
                  "hover": Object {
                    "backgroundColor": "transparent",
                  },
                  "paddingBottom": 15,
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": "1.875rem",
                  "pointerEvents": undefined,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "textAlign": "center",
                  }
                }
              >
                <button
                  className=""
                  onClick={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#041532",
                      "borderColor": "#041532",
                      "borderRadius": 6,
                      "borderStyle": "solid",
                      "borderWidth": 1,
                      "color": "#FFFFFF",
                      "fontFamily": "PT Sans, sans-serif",
                      "fontSize": "1.25rem",
                      "fontStyle": "normal",
                      "fontWeight": 400,
                      "hover": "css-87ndg2",
                      "lineHeight": "1.3",
                      "paddingBottom": 5,
                      "paddingLeft": "1.25rem",
                      "paddingRight": "1.25rem",
                      "paddingTop": 5,
                    }
                  }
                  type="button"
                >
                  <span
                    className=""
                    style={Object {}}
                  >
                    EventWidgets_Agenda_Session_Watch_Recording__resx
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className=""
          style={Object {}}
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className=""
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "flex": "1 1 auto",
                  "hover": Object {
                    "backgroundColor": "transparent",
                  },
                  "paddingBottom": "1.875rem",
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": 15,
                  "pointerEvents": undefined,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "color": "#273F69",
                    "fontFamily": "PT Sans, sans-serif",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": 400,
                    "hover": "css-87ndg2",
                    "lineHeight": "1.3",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                  }
                }
              >
                <p>
                  EventGuestSide_VirtualDetails_JoiningInvitee__resx:{"fullName":"EventWidgets_InviteeName__resx:{\\"firstName\\":\\"\\",\\"lastName\\":\\"\\"}"}
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`cases for matching snapshot for session should match snapshot and display session not available widget when sessionId is invalid or session is deleted in test mode 1`] = `
<div
  className=""
  style={Object {}}
>
  <div
    className="sectionContainer"
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 0,
        "hover": Object {
          "backgroundColor": "#FFFFFF",
        },
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "margin": "auto",
          "maxWidth": "800px",
        }
      }
    >
      <div
        className=""
        style={Object {}}
      >
        <div
          className=""
          style={Object {}}
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className=""
              data-cvent-id="widget-SessionNotAvailableMessage-widget:virtualDetails-sessionNotAvailableMessage"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "flex": "1 1 auto",
                  "hover": Object {
                    "backgroundColor": "transparent",
                  },
                  "paddingBottom": 15,
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": "1.875rem",
                  "pointerEvents": undefined,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "color": "#041532",
                    "fontFamily": "PT Sans, sans-serif",
                    "fontSize": "1.375rem",
                    "fontStyle": "normal",
                    "fontWeight": 400,
                    "hover": "css-87ndg2",
                    "lineHeight": "1.3",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                  }
                }
              >
                <p>
                  EventGuestSide_VirtualDetails_SessionNotAvailableMessage__resx
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`cases for matching snapshot for session should match snapshot for displaying session webcast data 1`] = `
<div
  className=""
  style={Object {}}
>
  <div
    className="sectionContainer"
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 0,
        "hover": Object {
          "backgroundColor": "#FFFFFF",
        },
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <div
      className=""
      style={
        Object {
          "margin": "auto",
          "maxWidth": "800px",
        }
      }
    >
      <div
        className=""
        style={Object {}}
      >
        <div
          className=""
          style={Object {}}
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className=""
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "flex": "1 1 auto",
                  "hover": Object {
                    "backgroundColor": "transparent",
                  },
                  "paddingBottom": 0,
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": "1.875rem",
                  "pointerEvents": undefined,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "color": "#273F69",
                    "fontFamily": "PT Sans, sans-serif",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": 400,
                    "hover": "css-87ndg2",
                    "lineHeight": "1.3",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                  }
                }
              >
                EventGuestSide_VirtualDetails_passwordText__resx
              </div>
              <div
                className=""
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "color": "#041532",
                    "fontFamily": "PT Sans, sans-serif",
                    "fontSize": "1.875rem",
                    "fontStyle": "normal",
                    "fontWeight": 400,
                    "hover": "css-87ndg2",
                    "lineHeight": "1.3",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                  }
                }
              >
                <div
                  className=""
                  style={Object {}}
                >
                  attendee specific data password for session
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className=""
          style={Object {}}
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className=""
              data-cvent-id="widget-VirtualDetailsJoinButton-widget:virtualDetails-action-button"
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "flex": "1 1 auto",
                  "hover": Object {
                    "backgroundColor": "transparent",
                  },
                  "paddingBottom": 15,
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": "1.875rem",
                  "pointerEvents": undefined,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "textAlign": "center",
                  }
                }
              >
                <button
                  className=""
                  onClick={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#041532",
                      "borderColor": "#041532",
                      "borderRadius": 6,
                      "borderStyle": "solid",
                      "borderWidth": 1,
                      "color": "#FFFFFF",
                      "fontFamily": "PT Sans, sans-serif",
                      "fontSize": "1.25rem",
                      "fontStyle": "normal",
                      "fontWeight": 400,
                      "hover": "css-87ndg2",
                      "lineHeight": "1.3",
                      "paddingBottom": 5,
                      "paddingLeft": "1.25rem",
                      "paddingRight": "1.25rem",
                      "paddingTop": 5,
                    }
                  }
                  type="button"
                >
                  <span
                    className=""
                    style={Object {}}
                  >
                    EventWidgets_Agenda_Session_Join_Virtual__resx
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className=""
          style={Object {}}
        >
          <div
            className=""
            style={Object {}}
          >
            <div
              className=""
              style={
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "flex": "1 1 auto",
                  "hover": Object {
                    "backgroundColor": "transparent",
                  },
                  "paddingBottom": "1.875rem",
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": 15,
                  "pointerEvents": undefined,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "color": "#273F69",
                    "fontFamily": "PT Sans, sans-serif",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": 400,
                    "hover": "css-87ndg2",
                    "lineHeight": "1.3",
                    "paddingBottom": 0,
                    "paddingLeft": 0,
                    "paddingRight": 0,
                    "paddingTop": 0,
                    "textAlign": "center",
                  }
                }
              >
                <p>
                  EventGuestSide_VirtualDetails_JoiningInvitee__resx:{"fullName":"EventWidgets_InviteeName__resx:{\\"firstName\\":\\"\\",\\"lastName\\":\\"\\"}"}
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
